--- a/index.html
+++ b/index.html
@@ -1735,7 +1735,7 @@ function addQuestionOption(text = '', isCorrect = false) {
 }
 
     // Configuration
-    const serverUrl = 'https://quiz-to21.onrender.com';
+    const serverUrl = 'https://tn-89f4.onrender.com';
     const PAGE_SIZE = 20;
     let currentUser = null;
 	
