--- a/index.html
+++ b/index.html
@@ -8893,8 +8893,8 @@ async function preparePrintArea(selectedTests, mode = "preview") {
         <div class="school-header" style="display:flex;align-items:center;justify-content:space-between;margin-bottom:10px;padding-bottom:6px;border-bottom:2px solid #000;">
 
           <div class="school-info" style="flex:1;text-align:center;">
-            <div class="school-name" style="font-weight:bold;font-size:18px;text-transform:uppercase;">Trường THCS ABC</div>
-            <div class="school-subtitle" style="font-style:italic;font-size:13px;margin-top:2px;color:#333;">Phòng Giáo dục & Đào tạo Quận XYZ</div>
+            <div class="school-name" style="font-weight:bold;font-size:18px;text-transform:uppercase;">Trường THCS ........................</div>
+            <div class="school-subtitle" style="font-style:italic;font-size:13px;margin-top:2px;color:#333;">Phòng Giáo dục & Đào tạo .....................</div>
           </div>
         </div>
 
